Tiny spacing fixes

--- a/valla.css
+++ b/valla.css
@@ -3803,11 +3803,11 @@ input[type=button].btn-block {
 
 .card-body {
   flex: 1 1 auto;
-  padding: 0.5rem 0;
+  padding: 1rem 0;
 }
 
 .card-title {
-  margin-bottom: 0.75rem;
+  margin-bottom: 1rem;
 }
 
 .card-subtitle {
@@ -9118,11 +9118,6 @@ input#da_attachment_include_editable {
 }
 input.labelauty + label{
   outline: none!important;
-}
-.da-attachment-email-all {
-    margin: 50px 0 0px;
-    border-top: 1px solid #ddd;
-    padding-top: 15px;
 }
 p.da-attachment-tab-download-intro {
     display: none;
